// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`browser bundle  1`] = `
Object {
  "css": undefined,
  "js": "",
}
`;

exports[`browser bundle export let x = 0 1`] = `
Object {
  "css": undefined,
  "js": "// <Untitled>
var x = 0;
export {
  x
};
",
}
`;
